--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section class="home">
             <div class="home-content">
-                <h1>Welcome to QUIZLANG<span>,</span></h1>
+                <h1>Welcome to QUIZLANG<span></span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error obcaecati eaque, quos velit enim dolores laudantium tempora dolorum ducimus dolorem minus delectus ad voluptate quia culpa cumque quis quaerat amet.</p>
                 <button class="start-btn">Iniciar Quiz</button>
             </div>
