--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main class="main">
+        <div class="box-hidden"></div>
         <header class="header">
             <a href="#home" class="logo">Quiz<span>Lang</span></a>
 
@@ -23,8 +24,33 @@
         <div class="conteiner">
             
             <section class="quiz">
+                <div class="box">
+                    <div class="quiz-box">
+                        <div class="quiz-header">
+                            <h1>QUIZ<span>LANG</span></h1>
+                        </div>
+                        <div class="score-box">
+                            <p class="score">Pontuação: 1 / 5</p>
+                        </div>
 
-            </section>
+                            <h2 class="question-txt">1. Como se diz "óla" em chinês?</h2>
+                            <div class="option-list">
+                                <p class="option">A. 你呢</p>
+                                <p class="option">B. 我好</p>
+                                <p class="option">C. 你好</p>
+                                <p class="option">D. 你好吗</p>
+                            </div>
+                    </div>
+
+                    <div class="line"></div>
+
+                    <div class="quiz-footer">
+                        <p class="count">1 de 5 questões</p>
+                        <button class="btn-next">PRÓXIMO</button>
+                    </div>
+                </div>
+                <div class="btn-close-box"><button class="btn-close">FECHAR</button></div>
+            </section>  
             
             <section class="home">
                 <div class="home-content">
@@ -32,7 +58,7 @@
                     <div class="paragrafo">
                         <p>Descubra o mundo fascinante do mandarim conosco! Nosso site é seu portal para dominar a língua chinesa. Imagine-se navegando sem dificuldades em conversasem chinês - e nós podemos te ajudar a chegar lá! Não perca mais tempo, dê o primeiro passo para essa jornada emocionante.</p>
                     </div>
-                    <button class="start-btn">Iniciar Quiz</button>
+                    <div class="animation"><button class="start-btn">Iniciar Quiz</button></div>
                 </div>
             </section>
         </div>
