Add questions and questio script

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a href="#home" class="logo">Quiz<span>Lang</span></a>
 
             <nav class="navbar">
-                <a href="#Home" class="active">Home</a>
-                <a href="#Sobre">Sobre</a>
+                <a href="#Home" class="home-section active">Home</a>
+                <a href="#Sobre" class="sobre-section">Sobre</a>
                 <a href="#Services">Serviços</a>
                 <a href="#Contacto">Contacto</a>    
             </nav>
@@ -33,12 +33,12 @@
                             <p class="score">Pontuação: 1 / 5</p>
                         </div>
 
-                            <h2 class="question-txt">1. Como se diz "óla" em chinês?</h2>
+                            <h2 class="question-txt"></h2>
                             <div class="option-list">
-                                <p class="option">A. 你呢</p>
+                                <!-- <p class="option">A. 你呢</p>
                                 <p class="option">B. 我好</p>
                                 <p class="option">C. 你好</p>
-                                <p class="option">D. 你好吗</p>
+                                <p class="option">D. 你好吗</p> -->
                             </div>
                     </div>
 
@@ -62,6 +62,7 @@
                 </div>
             </section>
         </div>
+        
     </main>
 
     <div class="popup-info">
