Script of Option list
Atualização dos campos de resposta
     Campos mais didáticos
     Atualização de pontos
     Atualização de número da questão atual para servir de acompanhamento

"Estou a aprender muito com este projecto"

"Vou rir no futuro quando souber mais de JavaScript 😂"

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <h1>QUIZ<span>LANG</span></h1>
                         </div>
                         <div class="score-box">
-                            <p class="score">Pontuação: 1 / 5</p>
+                            <p class="score"></p>
                         </div>
 
                             <h2 class="question-txt"></h2>
@@ -45,7 +45,9 @@
                     <div class="line"></div>
 
                     <div class="quiz-footer">
-                        <p class="count">1 de 5 questões</p>
+                        <div class="quiz-footer-count">
+                            <p class="count"></p>
+                        </div>
                         <button class="btn-next">PRÓXIMO</button>
                     </div>
                 </div>
